# vizsla

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  README.zh-CN.md  build.rs  rust-toolchain.toml  rustfmt.toml
crates/base-db/: Cargo.toml
crates/base-db/src/: change.rs  compilation_plan.rs  compile_units.rs  diagnostics_config.rs  intern.rs  lib.rs  package_graph.rs  preproc_index.rs  project.rs  source_database.rs  source_db.rs  source_root.rs
crates/hir/: Cargo.toml
crates/hir/src/: base_db.rs  container.rs  db.rs  display.rs  doc_tree.rs  file.rs  has_source.rs  hir_def.rs  in_file.rs  in_module.rs  lib.rs  nameres.rs  region_tree.rs  scope.rs  semantics.rs  source_map.rs  type_infer.rs
crates/hir/src/base_db/: change.rs  compilation_plan.rs  diagnostics_config.rs  intern.rs  project.rs  source_db.rs  source_root.rs
crates/hir/src/completion/: mod.rs  scope.rs
crates/hir/src/hir_def/: aggregate.rs  bit.rs  block.rs  control.rs  data.rs  declaration.rs  expr.rs  file.rs  generate.rs  interface.rs  literal.rs  lower.rs  module.rs  opaque.rs  pack_or_gen_item.rs  package.rs  package_import.rs  package_or_generate_item.rs  proc.rs  stmt.rs  subroutine.rs  tf.rs  ty.rs  typedef.rs
crates/hir/src/hir_def/block/: block_src.rs  lower.rs
crates/hir/src/hir_def/expr/: data_ty.rs  declarator.rs  timing_control.rs
crates/hir/src/hir_def/file/: config.rs  library.rs  udp.rs
crates/hir/src/hir_def/module/: continuous_assgin.rs  defparam.rs  generate.rs  instantiation.rs  lower.rs  modport.rs  module_item.rs  port.rs  specify.rs
crates/hir/src/semantics/: completion.rs  hir_to_def.rs  pathres.rs  resolver.rs  source_to_def.rs
crates/ide/: Cargo.toml  build.rs
crates/ide/src/: analysis.rs  analysis_host.rs  code_action.rs  code_lens.rs  completion.rs  db.rs  definitions.rs  diagnostics.rs  document_highlight.rs  document_symbols.rs  folding_ranges.rs  formatting.rs  goto_declaration.rs  goto_definition.rs  hover.rs  inlay_hint.rs  lib.rs  markup.rs  module_resolution.rs  navigation_target.rs  range.rs  references.rs  rename.rs  render.rs  selection_ranges.rs  semantic_tokens.rs  signature_help.rs  source_change.rs  test_utils.rs  verilog_2005.rs  workspace_symbols.rs
crates/ide/src/code_action/: action.rs  collector.rs  context.rs  diagnostics.rs  edits.rs  engine.rs  handlers.rs  module_members.rs  tests.rs
crates/ide/src/code_action/handlers/: add_default_case_item.rs  add_implicit_named_port_parens.rs  add_instance_parens.rs  add_missing_connections.rs  add_missing_parameters.rs  apply_de_morgan.rs  convert_literal_base.rs  convert_ordered_connections.rs  expand_compound_assignment.rs  expand_postfix_inc_dec.rs  insert_expected_token.rs  invert_if_else.rs  remove_empty_port_connections.rs  sort_named_instantiation_items.rs  sort_named_parameter_assignments.rs  sort_named_port_connections.rs  split_declaration_declarators.rs  unwrap_single_statement_block.rs  wrap_statement_in_begin_end.rs
crates/ide/src/completion/: analysis.rs  context.rs  directives.rs  engine.rs  keywords.rs  mod.rs  port_keywords.rs  render.rs  request.rs  result.rs  syntax_keywords.rs
crates/ide/src/completion/context/: analyzer.rs  caret.rs  decl_name.rs  expected.rs  expression.rs  filter.rs  lex.rs  mod.rs  parser.rs  resolve.rs  syn.rs  token.rs  util.rs
crates/ide/src/completion/engine/: expr.rs  instantiation.rs  item.rs  keywords.rs  keywords.toml  literal.rs  member.rs  named.rs  paren_list.rs  plan.rs  port_list.rs  preproc.rs  sensitivity_list.rs  snippets.rs  snippets.toml  system.rs  tests.rs  typed_filter.rs
crates/ide/src/completion/providers/: dot_completion.rs  identifier.rs  mod.rs  parameter_list.rs  port_connection.rs  scope_resolution.rs  type_reference.rs
crates/ide/src/db/: apply_change.rs  line_index_db.rs  root_db.rs  workspace_symbol_index_db.rs
crates/ide/src/document_highlight/fixtures/: typedef_highlight_same_file.v
crates/ide/src/references/: search.rs
crates/ide/src/semantic_tokens/: collector.rs  port.rs
crates/ide/src/semantic_tokens/fixtures/: typedef_tokens.v
crates/ide/src/snapshots/: ide__document_highlight__tests__typedef_highlight_same_file.snap  ide__semantic_tokens__tests__typedef_tokens.snap  ide__verilog_2005__verilog_2005_lsp_snapshots.snap
crates/ide/tests/: completion.rs
crates/ide/tests/fixtures/completion/: manifest.json
crates/project-model/: Cargo.toml
crates/project-model/src/: lib.rs  macro_def.rs  project_manifest.rs  toml_workspace.rs  workspace.rs
crates/project-model/src/toml_manifest/: mod.rs  schema.rs  spans.rs
crates/slang/: .gitignore  CMakeLists.txt  Cargo.toml
crates/slang/bindings/: CMakeLists.txt
crates/slang/bindings/python/: SyntaxBindings.cpp
crates/slang/bindings/rust/: CMakeLists.txt  ast.rs  build.rs  ffi.rs  lib.rs  sourcegen.rs  syntax.rs  tests.rs  token.rs
crates/slang/bindings/rust/ffi/: cxx_sv.rs  (+2 more)
crates/slang/scripts/: syntax_gen.py
crates/slang/source/: CMakeLists.txt
crates/slang/source/ast/: Compilation.cpp
crates/slang/source/parsing/: Parser.cpp  ParserBase.cpp  Parser_expressions.cpp  Parser_members.cpp  Parser_statements.cpp  Preprocessor.cpp
crates/slang/source/syntax/: SyntaxFacts.cpp  SyntaxNode.cpp  SyntaxTree.cpp
crates/syntax/: Cargo.toml
crates/syntax/src/: ast.rs  has_name.rs  has_text_range.rs  lib.rs  parse.rs  ptr.rs  slang_ext.rs  syntax_kind.rs  tests.rs  treesit_ext.rs
crates/syntax/src/ast/: ptr.rs  support.rs  symbol.rs
crates/syntax/src/slang_ext/: ast_ext.rs  package.rs  token.rs  trivia.rs
crates/syntax/syntax_sourcegen/: sourcegen_ast.rs
crates/utils/: Cargo.toml
crates/utils/src/: cancellation.rs  excl_task.rs  get.rs  json.rs  lib.rs  line_index.rs  lines.rs  op_queue.rs  panic_context.rs  path_identity.rs  paths.rs  process.rs  test_support.rs  text_edit.rs  thread.rs  uimpl.rs  utry.rs
crates/vfs/: Cargo.toml
crates/vfs-notify/: Cargo.toml
crates/vfs-notify/src/: lib.rs
crates/vfs/src/: anchored_path.rs  file_set.rs  lib.rs  loader.rs  notify.rs  path_glob.rs  test_support.rs  vfs.rs  vfs_path.rs
(+647 files in other folders)
