[package]
name = "vizsla"
version = "0.1.0"
edition = "2021"
authors = ["roifewu <roifewu@gmail.com>"]
repository = "https://github.com/roife/vizsla"
keywords = ["lsp", "language-server", "ide", "verilog", "system-verilog"]
categories = ["development-tools"]
license = "MIT"
readme = "README.md"
description = "Language server for Verilog and System-Verilog"

[workspace]
members = [".", "crates/*"]

[workspace.package]
edition = "2021"

[dependencies]
base-db.workspace = true
hir.workspace = true
ide.workspace = true
project-model.workspace = true
utils.workspace = true
vfs-notify.workspace = true
vfs.workspace = true

always-assert = "0.1.3"
anyhow.workspace = true
clap = { version = "4.4.6", features = ["derive"] }
const_format.workspace = true
crossbeam-channel.workspace = true
itertools.workspace = true
line-index.workspace = true
lsp-server = "0.7.4"
lsp-types = "0.94.1"
nohash-hasher.workspace = true
num_cpus = "1.16.0"
parking_lot = "0.12.1"
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["registry", "fmt", "tracing-log",] }
tracing.workspace = true
triomphe.workspace = true


[workspace.dependencies]
base-db = { path = "./crates/base-db/", version = "0.0.0" }
hir = { path = "./crates/hir/", version = "0.0.0" }
ide = { path = "./crates/ide/", version = "0.0.0" }
ide-db = { path = "./crates/ide-db/", version = "0.0.0" }
project-model = { path = "./crates/project-model/", version = "0.0.0" }
sourcegen = { path = "./crates/sourcegen/", version = "0.0.0" }
syntax = { path = "./crates/syntax/", version = "0.0.0" }
tree-sitter-verilog = { path = "./crates/tree-sitter-verilog/", version = "0.0.1" }
utils = { path = "./crates/utils", version = "0.0.0" }
vfs = { path = "./crates/vfs", version = "0.0.0" }
vfs-notify = { path = "./crates/vfs-notify/", version = "0.0.0" }

anyhow = "1.0.75"
const_format = "0.2.31"
crossbeam-channel = "0.5.8"
either = "1.9.0"
itertools = "0.11.0"
la-arena = "0.3.1"
line-index = "0.1.0"
nohash-hasher = "0.2.0"
rustc-hash = "1.1.0"
salsa = "0.17.0-pre.2"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
smol_str = { version = "0.2.0", features = ["serde"] }
tracing = "0.1.37"
triomphe = "0.1.9"
tree-sitter = "0.20"
