[package]
name = "vide"
version = "0.1.9"
edition = "2024"
authors = ["roifewu <roifewu@gmail.com>", "hongjr03 <hongjr03@gmail.com>"]
repository = "https://github.com/pascal-lab/vide"
keywords = ["lsp", "language-server", "ide", "verilog", "system-verilog"]
categories = ["development-tools"]
license = "MIT"
readme = "README.md"
description = "Language server for Verilog and System-Verilog"

[workspace]
members = [".", "crates/*", "xtask"]

[workspace.package]
edition = "2024"

[dependencies]
base-db.workspace = true
hir.workspace = true
ide.workspace = true
project-model.workspace = true
span.workspace = true
syntax.workspace = true
slang.workspace = true
utils.workspace = true
vfs-notify.workspace = true
vfs.workspace = true

always-assert.workspace = true
anyhow.workspace = true
clap = { version = "4.4.6", features = ["derive"] }
const_format.workspace = true
crossbeam-channel.workspace = true
dunce.workspace = true
itertools.workspace = true
la-arena.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
nohash-hasher.workspace = true
num_cpus.workspace = true
parking_lot = "0.12.1"
regex.workspace = true
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["registry", "fmt", "tracing-log",] }
tracing-chrome = "0.7.2"
tracing.workspace = true
triomphe.workspace = true


[workspace.dependencies]
base-db = { path = "./crates/base-db/", version = "0.0.0" }
hir = { path = "./crates/hir/", version = "0.0.0" }
ide = { path = "./crates/ide/", version = "0.0.0" }
ide-db = { path = "./crates/ide-db/", version = "0.0.0" }
proc-macro-utils = { path = "./crates/proc-macro-utils/", version = "0.0.0" }
project-model = { path = "./crates/project-model/", version = "0.0.0" }
span = { path = "./crates/span/", version = "0.0.0" }
syntax = { path = "./crates/syntax/", version = "0.0.0" }
utils = { path = "./crates/utils", version = "0.0.0" }
vfs = { path = "./crates/vfs", version = "0.0.0" }
vfs-notify = { path = "./crates/vfs-notify/", version = "0.0.0" }
slang = { path = "./crates/slang", version = "0.0.1" }
parking_lot = "0.12.1"


always-assert = "0.1.3"
anyhow = "1.0.75"
bitflags = "2.9.0"
camino = "1.1.6"
const_format = "0.2.31"
crossbeam-channel = "0.5.8"
dunce = "1.0.5"
either = "1.9.0"
globset = "0.4.16"
itertools = "0.14.0"
la-arena = "0.3.1"
lsp-server = "0.7.6"
lsp-types = "0.95.0"
memchr = "2.7.1"
nohash-hasher = "0.2.0"
num_cpus = "1.16.0"
regex = "1.10.2"
rustc-hash = "2.1.1"
salsa = "0.17.0-pre.2"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
smallvec = { version = "1.10.0", features = [
  "const_new",
  "union",
  "const_generics",
] }
smol_str = { version = "0.3.1", features = ["serde"] }
tempfile = "3.27.0"
text-size = "1.1.1"
thiserror = "2.0.0"
toml = "0.9.8"
tracing = "0.1.37"
triomphe = "0.1.9"
winapi = "0.3.9"

[profile.dev]
debug = 1

[profile.dev.package]
# These speed up local tests.
rustc-hash.opt-level = 3
smol_str.opt-level = 3
smallvec.opt-level = 3
text-size.opt-level = 3
serde.opt-level = 3
salsa.opt-level = 3

[profile.release]
incremental = true
debug = 0
strip = "symbols"

[profile.release-lto]
inherits = "release"
lto = true

[target.'cfg(target_os = "windows")'.dependencies]
winapi.workspace = true

[dev-dependencies]
utils = { workspace = true, features = ["test-support"] }
