[package]
name = "base-db"
version = "0.0.0"
description = "Indexing database"

edition.workspace = true

[dependencies]
itertools.workspace = true
la-arena.workspace = true
rustc-hash.workspace = true
salsa.workspace = true
smol_str.workspace = true
syntax.workspace = true
tree-sitter.workspace = true
tree-sitter-verilog.workspace = true
triomphe.workspace = true
utils.workspace = true
vfs.workspace = true
