[package]
name = "hir"
version = "0.0.0"
edition.workspace = true

[dependencies]
hashbrown = { version = "0.12.3", features = ["inline-more"], default-features = false }
itertools.workspace = true
la-arena.workspace = true
proc-macro-utils.workspace = true
rustc-hash.workspace = true
salsa.workspace = true
smallvec.workspace = true
smol_str.workspace = true
syntax.workspace = true
tracing.workspace = true
triomphe.workspace = true
utils.workspace = true
vfs.workspace = true
