[package]
name = "ide"
version = "0.0.0"
description = "IDE related components"

edition.workspace = true

[dependencies]
base-db.workspace = true
bitflags.workspace = true
hir.workspace = true
ide-db.workspace = true
itertools.workspace = true
la-arena.workspace = true
line-index.workspace = true
memchr.workspace = true
nohash-hasher.workspace = true
rustc-hash.workspace = true
smol_str.workspace = true
smallvec.workspace = true
span.workspace = true
syntax.workspace = true
thiserror.workspace = true
triomphe.workspace = true
utils.workspace = true
vfs.workspace = true
