[package]
name = "ide"
version = "0.0.0"
description = "IDE related components"

edition.workspace = true

[dependencies]
anyhow.workspace = true
base-db.workspace = true
bitflags.workspace = true
dissimilar = "1.0.9"
hir.workspace = true
ide-db.workspace = true
itertools.workspace = true
la-arena.workspace = true
memchr.workspace = true
nohash-hasher.workspace = true
rustc-hash.workspace = true
smol_str.workspace = true
smallvec.workspace = true
span.workspace = true
syntax.workspace = true
thiserror.workspace = true
triomphe.workspace = true
utils.workspace = true
which = "7.0.0"
vfs.workspace = true
