[package]
name = "project-model"
version = "0.0.0"
description = "Model of a project"

edition.workspace = true

[dependencies]
vfs.workspace = true
anyhow.workspace = true
base-db.workspace = true
const_format.workspace = true
itertools.workspace = true
once_cell = "1.18.0"
regex = "1.10.2"
rustc-hash.workspace = true
serde.workspace = true
smol_str.workspace = true
toml = "0.8.8"
triomphe.workspace = true
utils.workspace = true
