[package]
name = "project-model"
version = "0.0.0"
description = "Model of a project"

edition.workspace = true

[dependencies]
vfs.workspace = true
anyhow.workspace = true
base-db.workspace = true
const_format.workspace = true
itertools.workspace = true
regex.workspace = true
rustc-hash.workspace = true
serde.workspace = true
smol_str.workspace = true
toml = "0.8.8"
triomphe.workspace = true
utils = { workspace = true, features = ["camino_serde1"] }

[dev-dependencies]
utils = { workspace = true, features = ["camino_serde1", "test-support"] }
