[package]
name = "project-model"
version = "0.0.0"
description = "Model of a project"

edition.workspace = true

[features]
manifest-schema = ["dep:schemars", "dep:serde_json"]

[dependencies]
vfs.workspace = true
anyhow.workspace = true
const_format.workspace = true
hir.workspace = true
itertools.workspace = true
regex.workspace = true
rustc-hash.workspace = true
serde.workspace = true
serde_json = { workspace = true, optional = true }
smol_str.workspace = true
toml = "0.8.8"
triomphe.workspace = true
utils = { workspace = true, features = ["camino_serde1"] }
schemars = { version = "1.2.1", features = ["preserve_order"], optional = true }

[dev-dependencies]
utils = { workspace = true, features = ["camino_serde1", "test-support"] }
