[package]
name = "syntax"
version = "0.0.0"
description = "AST- and parser-related components"

edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either.workspace = true
line-index.workspace = true
serde.workspace = true
smol_str.workspace = true
slang.workspace = true
utils.workspace = true
