[package]
name = "utils"
version = "0.0.0"
description = "Utils"

edition.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
crossbeam-channel.workspace = true
itertools.workspace = true
jod-thread = "0.1.2"
la-arena.workspace = true
libc = "0.2.150"
memchr.workspace = true
nohash-hasher.workspace = true
serde.workspace = true
serde_json.workspace = true
slang.workspace = true
text-size.workspace = true
tracing.workspace = true
triomphe.workspace = true

[features]
camino_serde1 = ["camino/serde1"]
