[package]
name = "utils"
version = "0.0.0"
description = "Utils"

edition.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
crossbeam-channel.workspace = true
dunce.workspace = true
itertools.workspace = true
jod-thread = "0.1.2"
la-arena.workspace = true
libc = "0.2.150"
memchr.workspace = true
nohash-hasher.workspace = true
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
text-size.workspace = true
tracing.workspace = true
triomphe.workspace = true

[target.'cfg(windows)'.dependencies]
winapi-util = "0.1.11"

[features]
camino_serde1 = ["camino/serde1"]
test-support = []
