[package]
name = "vfs-notify"
version = "0.0.0"
description = "A impl for watching file system changes"

edition.workspace = true

[dependencies]
crossbeam-channel.workspace = true
itertools.workspace = true
notify = "6.1.1"
tracing.workspace = true
utils.workspace = true
vfs.workspace = true
walkdir = "2.4.0"
