[package]
name = "vfs-notify"
version = "0.0.0"
description = "A impl for watching file system changes"

edition.workspace = true

[dependencies]
crossbeam-channel.workspace = true
itertools.workspace = true
notify = "6.1.1"
rayon = "1.10.0"
rustc-hash.workspace = true
tracing.workspace = true
utils.workspace = true
vfs.workspace = true
walkdir = "2.4.0"

[dev-dependencies]
tempfile.workspace = true
